--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 python-telegram-bot>=20.0
-mega.py>=1.0.8
-matplotlib>=3.5.0
-psutil>=5.8.0
-tenacity>=5.1.5,<6.0.0
+mega.py
+psutil
+certifi
+tenacity>=8.2.3
